files/style.css
body {
    display: flex;
    flex-direction: column;

    margin: 0;

    font-family: "Noto Sans", "Noto Emoji", serif;
    font-size: 20px;

    background: green;
}

div {
    width: fit-content;
    height: fit-content;
}

header {
    overflow: hidden;

    max-width: 591px;
    margin-bottom: 5px;

    font-weight: 500;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.header-content {
    display: flex;
    flex-direction: row;
}

.header-text {
    display: flex;
    flex-direction: column;
}

.preview {
    width: 50px;
    height: 50px;
    margin-top: 5px;
    margin-right: 10px;

    border-radius: 10px;
}

.photo {
    width: 100%;
    margin-right: 5px;
    margin-bottom: 5px;
    border-radius: 10px;
}

p {
    max-width: 660px;
    margin: 0;
    overflow-wrap: break-word;
}

.header-text > p {
    overflow: hidden;
    max-width: 591px;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.speeches {
    max-width: 768px;
    padding-top: 5px;
    padding-left: 5px;

    background-size: 100% 100%;
    border-right: 1px solid black;
    border-bottom: 1px solid black;
}

.speech {
    position: relative;
    display: flex;
    flex-direction: row;
    padding-right: 5px;
}

.messages {
    position: relative;

    display: flex;
    flex-direction: column;

    max-width: 697px;
    margin-left: 60px;
}

.message {
    display: flex;

    min-width: 80px;
    margin-bottom: 5px;
    padding: 10px;

    border-radius: 10px;
}

.message:last-child {
    border-radius: 10px  10px 10px 0;
}

.reply {
    margin: 5px 0 5px 0;
    padding: 10px;
    border-radius: 5px  10px 10px 5px;
}

.mediagroup {
    width: 100%;
    margin: 5px 0 5px 0;
    padding: 10px;

    background: rgba(108, 191, 98, 0.1);
    border-radius: 5px  10px 10px 5px;
}

.warning {
    margin: 5px 0 5px 0;
    padding: 10px;

    color: red;

    background: rgba(255, 0, 0, 0.1);
    border-radius: 5px  10px 10px 5px;
}

.avatar {
    position: absolute;
    bottom: 5px;

    width: 45px;
    height: 45px;

    line-height: 45px;
    color: white;
    text-align: center;
    vertical-align: middle;

    border-radius: 50px;
}

.tail {
    position: absolute;
    bottom: 5px;
    left: 45px;

    width: 15px;
    height: 15px;
    margin-bottom: 0;
}

.time {
    margin-top: 2px;
    font-size: 18px;
    color: gray;
    text-align: right;
}

code {
    font-family: "Noto Mono", monospace;
    color: #60819c;
}

tg-spoiler {
    background-color: darkgray;
    border-radius: 2px;
}

blockquote {
    width: fit-content;
    margin: 5px 0 5px 0;
    padding: 10px;

    background: rgba(108, 191, 98, 0.1);
    border-left: 5px solid #6cbf62;
    border-radius: 5px  10px 10px 5px;
}

pre {
    width: fit-content;
    max-width: 660px;
    margin: 5px 0 5px 0;
    padding: 10px;

    word-wrap: break-word;
    white-space: normal;

    background: rgba(96, 129, 156, 0.1);
    border-left: 5px solid #60819c;
    border-radius: 5px  10px 10px 5px;
}

